// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_scout_apm datatype_in_add 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_scout_apm",
      "title": "Leakage of sensitive data to Scout APM",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Scout APM.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Scout APM docs](https://scoutapm.com/docs/ruby)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_scout_apm",
      "line_number": 1,
      "full_filename": "/tmp/bearer-scan/datatype_in_add.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 33,
          "end": 54
        }
      },
      "sink": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 1,
          "end": 58
        },
        "content": "ScoutApm::Context.add({ user: { first_name: \\"someone\\" }})"
      },
      "parent_line_number": 1,
      "snippet": "ScoutApm::Context.add({ user: { first_name: \\"someone\\" }})",
      "fingerprint": "2e6ed4d28852ce79a75741641fa8b1a3_0",
      "old_fingerprint": "76329b27f9c8a069fc8928ecbcc28c95_0",
      "code_extract": "ScoutApm::Context.add({ user: { first_name: \\"someone\\" }})"
    }
  ]
}"
`;

exports[`ruby_third_parties_scout_apm datatype_in_add_user 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_scout_apm",
      "title": "Leakage of sensitive data to Scout APM",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Scout APM.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Scout APM docs](https://scoutapm.com/docs/ruby)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_scout_apm",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_add_user.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 10,
          "end": 38
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 33
        },
        "content": "ScoutApm::Context.add_user(user)"
      },
      "parent_line_number": 2,
      "snippet": "ScoutApm::Context.add_user(user)",
      "fingerprint": "2e6ed4d28852ce79a75741641fa8b1a3_0",
      "old_fingerprint": "7589e8e314cc7ce8f0410d0681b79d5b_0",
      "code_extract": "ScoutApm::Context.add_user(user)"
    }
  ]
}"
`;

exports[`ruby_third_parties_scout_apm ok_datatype_ignored 1`] = `"{}"`;

exports[`ruby_third_parties_scout_apm ok_no_datatype 1`] = `"{}"`;
